# phys-lab

./: geometrical_optics.py  pyproject.toml  requirements.txt
labs/: circuits.py  friction.py  geometrical_optics.py  harmonic.py  harmonic_to_csv.py  optics.py  viscosity.py
phys-lab/equation/: equation.py
phys-lab/graph/: fit.py  graph.py  stats.py
phys-lab/labs/: friction.py  geometrical_optics.py  viscosity.py
phys-lab/report/: report.py
physpy/: __init__.py
physpy/config/: __init__.py
physpy/equation/: equation.py
physpy/graph/: __init__.py  fit.py  graph.py  stats.py
physpy/report/: report.py
physpy/table/: table.py
physpy/utils/: math.py  utils.py
